crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/044.cypher
MATCH (n) RETURN n; MATCH (n) REMOVE n.secret
